# rdma-cache-sys

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  README_BUILD.md  build.sh  exp_a1_results.json  experiments.csv  experiments_l3.csv  requirements.txt  run.sh  test_a1.json  test_final.json  test_fixed.json  test_hw.json  test_ns.json  test_result.json  实验设计.md
docs/: encode_decode_analysis.md  exp_b2_b3_analysis.md  experiment_methodology.md  paper_experiment_section.md
include/: access_patterns.hpp  cache_layers.hpp  migration.hpp  simulator.hpp  tokens.hpp
plot/: exp1.py
results/: exp_20251104_181216.csv  exp_20251105_151632.csv  exp_2048_128.json  exp_2048_16.json  exp_2048_256.json  exp_2048_32.json  exp_2048_64.json  exp_4096_128.json  exp_4096_16.json  exp_4096_256.json  exp_4096_32.json  exp_4096_64.json  exp_8192_128.json  exp_8192_16.json  exp_8192_256.json  exp_8192_32.json  exp_8192_64.json  exp_a1_20251104_100409.json  exp_a1_20251104_100438.json  exp_a1_20251104_100721.json  exp_a1_20251104_100742.json  exp_a1_20251104_100759.json  exp_a1_20251104_101357.json  exp_a1_20251104_101531.json  exp_a1_20251104_104912.json  exp_a1_20251104_111927.json  exp_a1_20251104_111943.json  exp_a1_20251104_144123.json  exp_a1_20251104_145534.json  exp_a1_20251104_145557.json  exp_a1_20251104_145601.json  exp_a1_20251104_151342.json  exp_a1_20251104_151353.json  exp_a1_20251104_151516.json  exp_a1_20251104_151520.json  exp_a1_20251104_153116.json  exp_a1_20251104_153119.json  exp_a1_20251104_153702.json  exp_a1_20251104_153724.json  exp_a1_20251104_153736.json  (+52 more)
src/: access_patterns.cpp  cache_layers.cpp  main.cpp  migration.cpp  simulator.cpp  tokens.cpp
tools/: bench_token_compress.cpp  cache_experiments.cpp  exp_a1_compress.cpp  exp_b1_baseline.cpp  exp_b2_hot_inline.cpp  exp_b3_prefetched_batch.cpp
web/: app.py
web/results/: bench_20251103_151640.json  bench_20251103_151652.json  bench_20251103_151708.json  bench_20251103_151719.json  bench_20251103_153956.json  bench_20251104_094056.json  bench_20251104_094114.json  bench_20251104_094119.json  exp_20251103_150909.csv  exp_20251103_152805.csv  exp_20251103_152920.csv  exp_20251103_154530.csv  (+22 more)
(+14 files in other folders)
